RESOLVED FIXED56463
[Qt] TextBreakIteratorQt.cpp missing #include <algorithm> needed for some platforms.
https://bugs.webkit.org/show_bug.cgi?id=56463
Summary [Qt] TextBreakIteratorQt.cpp missing #include <algorithm> needed for some pla...
Keith Kyzivat
Reported 2011-03-16 08:16:17 PDT
On some Qt-powered devices, std::swap is unable to be found unless the <algorithm> header is included, in the case of TextBreakIteratorQt.cpp. On Mac, this is appears to be accomplished by a universally included common header, but Qt does not use this. ../../../webkit/Source/WebCore/platform/text/qt/TextBreakIteratorQt.cpp: In function 'WebCore::TextBreakIterator* WebCore::acquireLineBreakIterator(const UChar*, int)': ../../../webkit/Source/WebCore/platform/text/qt/TextBreakIteratorQt.cpp:92: error: 'swap' is not a member of 'std' make[1]: *** [obj/release/TextBreakIteratorQt.o] Error 1
Attachments
Patch (1.79 KB, patch)
2011-03-16 15:29 PDT, Keith Kyzivat
no flags
Keith Kyzivat
Comment 1 2011-03-16 15:29:08 PDT
Created attachment 85988 [details] Patch Patch with fix
Andreas Kling
Comment 2 2011-03-16 16:11:00 PDT
Comment on attachment 85988 [details] Patch r=me
WebKit Commit Bot
Comment 3 2011-03-16 17:32:50 PDT
The commit-queue encountered the following flaky tests while processing attachment 85988 [details]: http/tests/inspector/network/network-timing.html bug 56509 (author: pfeldman@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2011-03-16 17:35:06 PDT
Comment on attachment 85988 [details] Patch Clearing flags on attachment: 85988 Committed r81302: <http://trac.webkit.org/changeset/81302>
WebKit Commit Bot
Comment 5 2011-03-16 17:35:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.