2011-03-16  Keith Kyzivat  <keith.kyzivat@nokia.com>

Reviewed by Andreas Kling.

        [Qt] Fix std::swap not found issue on mobile Qt devices.
        https://bugs.webkit.org/show_bug.cgi?id=56463

        Include <algorithm> in TextBreakIteratorQt.cpp so std::swap is found
        on some Qt mobile devices.

        No new tests: No tests needed - compilation verified manually.

        * platform/text/qt/TextBreakIteratorQt.cpp:
        (WebCore::acquireLineBreakIterator):

Canonical link: https://commits.webkit.org/71177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81302 268f45cc-cd09-0410-ab3c-d52691b4dbfc